--- a/package.json
+++ b/package.json
@@ -35,68 +35,70 @@
     "scheduler": ">=0.19.0"
   },
   "dependencies": {
-    "array.prototype.flatmap": "^1.2.5",
-    "classnames": "^2.3.1",
+    "@types/react-window": "^2.0.0",
+    "array.prototype.flatmap": "^1.3.3",
+    "classnames": "^2.5.1",
     "fast-formula-parser": "^1.0.19",
+    "react-window": "^2.2.6",
     "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
-    "@chromatic-com/storybook": "^3.2.6",
-    "@storybook/addon-essentials": "^8.6.11",
-    "@storybook/addon-interactions": "^8.6.11",
-    "@storybook/addon-links": "^8.6.11",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@chromatic-com/storybook": "^3.2.7",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.15",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/blocks": "^8.6.11",
-    "@storybook/react": "^8.6.11",
-    "@storybook/react-webpack5": "^8.6.11",
-    "@storybook/test": "^8.6.11",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^16.1.0",
-    "@types/array.prototype.flatmap": "^1.2.2",
-    "@types/node": "^16.7.10",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-select": "^3.0.26",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "babel-eslint": "^10.0.0",
-    "cross-env": "^5.1.4",
-    "eslint": "^7.19.0",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.15",
+    "@storybook/react-webpack5": "^8.6.15",
+    "@storybook/test": "^8.6.15",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^16.3.2",
+    "@types/array.prototype.flatmap": "^1.2.6",
+    "@types/node": "^16.18.126",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-select": "^3.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^5.2.1",
+    "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "gh-pages": "^2.0.1",
+    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "gh-pages": "^2.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-css": "^6.0.1",
+    "jest-transform-css": "^6.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
+    "postcss": "^8.5.6",
+    "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-select": "^5.9.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-postcss": "^4.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-select": "^5.10.2",
+    "rollup": "^3.29.5",
+    "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.35.0",
-    "scheduler": "^0.20.0",
-    "storybook": "^8.6.11",
-    "stylelint": "^16.12.0",
+    "scheduler": "^0.20.2",
+    "storybook": "^8.6.15",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard": "36.0.1",
-    "ts-jest": "^29.1.0",
-    "tslib": "^2.3.1",
+    "ts-jest": "^29.4.6",
+    "tslib": "^2.8.1",
     "typedoc": "^0.23.28",
-    "typedoc-plugin-rename-defaults": "^0.6.4",
+    "typedoc-plugin-rename-defaults": "^0.6.7",
     "typescript": "4.9.5",
-    "webpack": "^5.97.1"
+    "webpack": "^5.104.1"
   },
   "jest": {
     "preset": "ts-jest",
